fixed text overflowing

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 
 ::-webkit-scrollbar-thumb {
     background-color: rgba(0, 0, 0, 0.1);
-    outline: 1px solid slategrey
+    outline: 1px solid slategrey;
 }
 
 /*
